Integrate R3 cooperative PVE release
